# gensvs

./: .gitignore  README.md  pyproject.toml  setup_conda_env.sh
demo/: evaluation_demo.py  inference_demo.py
demo/eval_metrics/melroformer_bigvgan/music2latent_MSE/: embd_mse.csv
demo/eval_metrics/melroformer_small/music2latent_MSE/: embd_mse.csv
eval_metrics_command_line/melroformer_bigvgan/MERT-v1-95M_MSE/: embd_mse.csv
eval_metrics_command_line/melroformer_small/MERT-v1-95M_MSE/: embd_mse.csv
eval_metrics_command_line/sgmsvs/music2latent_MSE/: embd_mse.csv
metrics/MERT-v1-95M_MSE/: embd_mse.csv
metrics/music2latent_MSE/: embd_mse.csv
results/sgmsvs/MERT-v1-95M_MSE/: embd_mse.csv
src/eval_utils/: model_loader.py
src/gensvs/: __init__.py  cli.py  evaluate.py  inference.py  models.py
src/gensvs/eval_utils/: model_loader.py  utils.py
