[project]
name = "gensvs"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul A. Bereuter", email = "paul.bereuter@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "auraloss>=0.4.0",
    "beartype>=0.21.0",
    "cmake>=4.0.3",
    "demucs>=4.0.1",
    "einops>=0.8.1",
    "huggingface-hub>=0.23.4",
    "hypy-utils>=1.0.29",
    "librosa>=0.8.1",
    "matplotlib>=3.10.3",
    "ml-collections>=1.1.0",
    "music2latent>=0.1.6",
    "ninja>=1.11.1.4",
    "nnaudio>=0.3.3",
    "numpy<2",
    "omegaconf>=2.3.0",
    "openunmix>=1.3.0",
    "pesq>=0.0.4",
    "ptflops>=0.7.4",
    "pytorch-lightning>=2.5.2",
    "rotary-embedding-torch>=0.8.8",
    "scipy>=1.16.0",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "torch-ema>=0.3",
    "torchaudio>=2.7.1",
    "torchmetrics>=1.7.4",
    "tqdm>=4.67.1",
    "transformers>=4.53.3",
    "wandb>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/gensvs"]

[tool.hatch.build.targets.wheel]
only-include =["src/gensvs", "src/gensvs/backbones", "src/gensvs/baseline_models", "src/gensvs/bigvgan_utils", "src/gensvs/eval_utils", "src/gensvs/sgmsvs"]

[tool.hatch.build.targets.wheel.sources]
"src"=""
"src/gensvs/backbones"="backbones"
"src/gensvs/baseline_models"="baseline_models"
"src/gensvs/bigvgan_utils"="bigvgan_utils"
"src/gensvs/eval_utils"="eval_utils"
"src/gensvs/sgmsvs"="sgmsvs"

[project.scripts]
gensvs = "gensvs.cli:main"
gensvs-eval = "gensvs.evaluate:main"

